--- a/package.json
+++ b/package.json
@@ -1,28 +1,13 @@
 {
-  "name": "EMPOWER-Automation-Cypress",
+  "name": "automation-test",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/cypress open",
-    "cy:run:chrome:dev": "node_modules/.bin/cypress run --browser chrome --config-file config/dev.cypress.json --headless",
-    "cy:run:chrome:qa": "node_modules/.bin/cypress run --browser chrome --config-file config/qa.cypress.json",
-    "cy:run:chrome:prod": "node_modules/.bin/cypress run --browser chrome --config-file config/prod.cypress.json",
-    "cy:run:firefox:dev": "node_modules/.bin/cypress run --browser firefox --config-file config/dev.cypress.json",
-    "cy:run:firefox:qa": "node_modules/.bin/cypress run --browser firefox --config-file config/qa.cypress.json",
-    "cy:run:firefox:prod": "node_modules/.bin/cypress run --browser firefox ----config-file config/prod.cypress.json"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SweatWorks/EMPOWER-Automation.git"
+    "test:run": "node_modules/.bin/cypress run --browser chrome --headless"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SweatWorks/EMPOWER-Automation/issues"
-  },
-  "homepage": "https://github.com/SweatWorks/EMPOWER-Automation#readme",
   "devDependencies": {
     "cypress": "^4.0.1"
   },
